# proche

./: .gitignore  CHANGELOG.md  Makefile  README.md  dl-avatars-for-mobile.sh  docker-compose-prod.yml  docker-compose.yml  gen-protos.sh
auth-server/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
auth-server/locales/: en.yml  es.yml  fr.yml
auth-server/proto/: auth.proto  media.proto
auth-server/src/: client.rs  main.rs  server.rs
auth-server/src/config/: db.rs  ipify.rs  locale.rs  mod.rs  session_manager.rs  sms_manager.rs  tokenizer.rs
auth-server/src/utils/: generators.rs
auth-server/twilio-rust/: .gitignore  Cargo.toml  README.md
auth-server/twilio-rust/src/apis/: configuration.rs  default_api.rs
auth-server/twilio-rust/src/models/: account_enum_status.rs  account_enum_type.rs  api_period_v2010_period_account.rs  api_period_v2010_period_account_period_address.rs  api_period_v2010_period_account_period_address_period_dependent_phone_number.rs  api_period_v2010_period_account_period_application.rs  api_period_v2010_period_account_period_authorized_connect_app.rs  api_period_v2010_period_account_period_available_phone_number_country.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_local.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_machine_to_machine.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_mobile.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_national.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_shared_cost.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_toll_free.rs  api_period_v2010_period_account_period_available_phone_number_country_period_available_phone_number_voip.rs  api_period_v2010_period_account_period_balance.rs  api_period_v2010_period_account_period_call.rs  api_period_v2010_period_account_period_call_period_call_event.rs  api_period_v2010_period_account_period_call_period_call_feedback.rs  api_period_v2010_period_account_period_call_period_call_feedback_summary.rs  api_period_v2010_period_account_period_call_period_call_notification.rs  api_period_v2010_period_account_period_call_period_call_notification_instance.rs  api_period_v2010_period_account_period_call_period_call_recording.rs  api_period_v2010_period_account_period_call_period_payments.rs  api_period_v2010_period_account_period_call_period_siprec.rs  api_period_v2010_period_account_period_call_period_stream.rs  api_period_v2010_period_account_period_call_period_user_defined_message.rs  api_period_v2010_period_account_period_conference.rs  (+169 more)
sms-server/: .gitignore  Cargo.toml  Dockerfile  build.rs
sms-server/locales/: en.yml  fr.yml
sms-server/proto/: sms.proto
sms-server/src/: main.rs  server.rs
sms-server/src/config/: db.rs  locale.rs  mod.rs
(+198 files in other folders)
