[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"
authors = ["qcodelabsllc@gmail.com"]
license = "MIT"
description = "Auth Server"
repository = "https://github.com/quabynah-bilson/nearme/tree/dev/auth-server"
keywords = ["nearme", "microservices", "grpc", "rust", "mongodb", "tonic"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
grpc = "0.8.3"
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
prost = { version = "0.11.8", default-features = false, features = ["prost-derive"] }
prost-types = "0.11.8"
serde = { version = "1.0.159", features = ["derive"] }
serde-protobuf = "0.8.2"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.9.1"
tonic-reflection = "0.9.1"
tonic-types = "0.9.1"
once_cell = "1.17.1"
rust-i18n = "1"
log = "0.4.17"
paseto = "2.0.0+1.0.3"
bcrypt = "0.14.0"
ring = { version = "^0.16", features = ["std", "default"] }
openapi = { path = "./twilio-rust" }
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.9.1"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "fr"]

# The default locale, default: "en".
# default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
# load-path = "locales"
