[package]
name = "sms-server"
version = "0.1.0"
edition = "2021"
authors = ["qcodelabsllc@gmail.com"]
license = "MIT"
description = "SMS Server"
repository = "https://github.com/quabynah-bilson/proche/tree/dev/sms-server"
keywords = ["proche", "microservices", "grpc", "rust", "postgre", "tonic"]

[[bin]]
name = "sms-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
grpc = "0.8.3"
prost = { version = "0.11.8", default-features = false, features = ["prost-derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.9.1"
tonic-reflection = "0.9.1"
tonic-types = "0.9.1"
once_cell = "1.17.1"
rust-i18n = "1"
log = "0.4.17"
reqwest = "0.11.16"
sqlx = { version = "0.7.0-alpha.2", features = ["postgres", "runtime-tokio-rustls", "macros", "json", "chrono"] }

[build-dependencies]
tonic-build = "0.9.1"
sqlx-cli = "0.7.0-alpha.2"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "fr"]